avoid horizontal scrollbar in composer when placeholder doesn't fit

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -107,7 +107,8 @@ limitations under the License.
     width: 100%;
     max-height: 120px;
     min-height: 19px;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     word-break: break-word;
 }
 
